--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
   <p>Light detected! Turning OFF Headlight </p>
-  <img src="../static/img-1.png" width="100%" height="100%">
+  <img src="/static/img-1.png" width="100%" height="100%">
   <p>No light detected! Turning ON Headlight</p>
-  <img src="../static/img-2.png" width="100%" height="100%">
+  <img src="/static/img-2.png" width="100%" height="100%">
    </body>
  </html>
